--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
             {% for user in users %}
             
             <li>
-                <a href="/index?username={{user.username}}">
+                <a href="/blog?user={{user.id}}">
                 <p>{{user.username}}</p>
                 </a>
             </li>
