--- a/templates/blogentry.html
+++ b/templates/blogentry.html
@@ -4,5 +4,9 @@
 
 <h1>{{blog.title}}</h1>
 <h3>{{blog.body}}</h3>
-
+<p>Written by: 
+    <a href="/blog?user={{blog.owner.id}}">
+    {{blog.owner.username}}
+    </a>
+</p>
 {% endblock %}
